RESOLVED FIXED267745
DOMParser::parseFromString doesn't need to use DOMImplementation::createDocument
https://bugs.webkit.org/show_bug.cgi?id=267745
Summary DOMParser::parseFromString doesn't need to use DOMImplementation::createDocument
Ryosuke Niwa
Reported 2024-01-18 18:07:44 PST
parseFromString can just check against 5 known allowed content type instead of invoking heavy handed DOMImplementation::createDocument.
Attachments
Ryosuke Niwa
Comment 1 2024-01-18 18:11:56 PST
EWS
Comment 2 2024-01-18 22:16:01 PST
Committed 273210@main (71674a689c42): <https://commits.webkit.org/273210@main> Reviewed commits have been landed. Closing PR #22954 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-18 22:16:15 PST
Note You need to log in before you can comment on or make changes to this bug.