DOMParser::parseFromString doesn't need to use DOMImplementation::createDocument https://bugs.webkit.org/show_bug.cgi?id=267745

Reviewed by Yusuke Suzuki.

Compare against the 5 allowed content types and directly invoke their constructors.

* Source/WebCore/xml/DOMParser.cpp:
(WebCore::DOMParser::parseFromString):

Canonical link: https://commits.webkit.org/273210@main